--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
     "browserify": "^11.0.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-less": "3.0.5",
     "gulp-react": "^3.0.1",
     "gulp-util": "^3.0.6",
-    "gulp-less": "3.0.5",
-    "react": "^0.13.3",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1"
